# v2

./: .gitattributes  .gitignore  .replit  CONTRIBUTING.md  README.md  docker-compose.yml  express-server.js  fixed-pdf-viewer.html  frontend-server.js  new-pdf-dialog.html  new_package.txt  new_replit.txt  new_vite_config.txt  package-lock.json  package.json  pdf-api-integration.js  pdf-dialog-viewer.html  pdf-viewer-modal.html  pdf-viewer-server.js  pdf-viewer.html  pyproject.toml  react-express.js  seb_colors.html  serve-static.js  server.js  simple-pdf-viewer.html  test.html
attached_assets/: Pasted--DOCTYPE-html-html-lang-sv-head-meta-charset-UTF-8-meta-name-viewport-content-1747527536695.txt  Pasted--DOCTYPE-html-html-lang-sv-head-meta-charset-UTF-8-meta-name-viewport-content-wi-1747300857858.txt  Pasted--ppnar-PDF-http-0-0-0-0-8001-api-files-web-fred1-70-data-project-files-2025-05-19-AAAAExempel-pa--1747684298970.txt  Pasted--ppnar-PDF-http-0-0-0-0-8001-api-files-web-fred1-70-data-project-files-2025-05-19-BEAst-PDF-Guide-1747684483451.txt  Pasted--ppnar-PDF-http-0-0-0-0-8001-api-files-web-fred1-70-data-project-files-2025-05-19-BEAst-PDF-Guide-1747684928310.txt  Pasted--ppnar-PDF-http-0-0-0-0-8001-api-files-web-karlatornet-31-54-data-project-files-2025-05-19-AAAAEx-1747674276757.txt  Pasted--ppnar-PDF-http-0-0-0-0-8001-api-files-web-karlatornet-31-54-data-project-files-2025-05-19-AAAAEx-1747674378816.txt  Pasted--ppnar-PDF-http-0-0-0-0-8001-api-files-web-karlatornet-31-54-data-project-files-2025-05-19-AAAAEx-1747675405118.txt  (+52 more)
backend/: create_user.py  manage.py
(+327 files in other folders)
